[package]
name = "keyboard"
version = "0.1.0"
edition = "2021"

[features]
encoders = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "keyboardrs"
path = "src/lib.rs"

[[bin]]
name = "onekey"
path = "keyboards/onekey/onekey.rs"

[[bin]]
name = "threebytwo"
path = "keyboards/3by2/3by2.rs"

[[bin]]
name = "late-night-engineering"
path = "keyboards/late-night-engineering/late-night-engineering.rs"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
critical-section = "1.1.1"
embedded-hal = "0.2.7"
fugit = "0.3.6"
interrupt = "0.1.3"
panic-halt = "0.2.0"
rp-pico = "0.7.0"
rp2040-hal = "0.8.2"
usb-device = "0.2.9"
usbd-hid = "0.6.1"
