[workspace]
members = ["hardware"]

[package]
name = "keyboard"
version = "0.1.0"
edition = "2021"
description = "A keyboard firmware library"
repository = "https://github.com/Colepng/keyboard-rs"
readme = "README.md"
license = "None"
keywords = ["embedded-hal", "firmware", "keyboard"]
categories = ["embedded", "no-std", "no-std::no-alloc"]

[features]
default = ["rp2040"]
encoders = []
rp2040 = []

[lib]
name = "keyboard_rs"
path = "src/lib.rs"

[[bin]]
name = "onekey"
path = "keyboards/onekey/onekey.rs"
required-features = ["encoders"]

[[bin]]
name = "threebytwo"
path = "keyboards/3by2/3by2.rs"

[[bin]]
name = "late-night-engineering"
path = "keyboards/late-night-engineering/late-night-engineering.rs"
required-features = ["encoders"]

[dependencies]
cortex-m = { version = "0.7.7" }
cortex-m-rt = "0.7.3"
# critical-section = "1.1.2"
embedded-hal = "0.2.7"
frunk = { version = "0.4", default-features = false }
fugit = "0.3.6"
hardware = { path = "./hardware/"}
panic-halt = "0.2.0"
rp-pico = "0.8.0"
rp2040-hal = { version = "0.9.0", features = ["rt"] }
usb-device = "0.2.9"
usbd-human-interface-device = "0.4.3"
