[package]
name = "hardware"
version = "0.1.0"
edition = "2021"
description = "A crate for basic platform-agnostic hardware"
repository = "https://github.com/Colepng/keyboard-rs"
readme = "README.md"
license = "None"
keywords = ["embedded-hal"]
categories = ["embedded", "no-std", "no-std::no-alloc"]

[dependencies]
either = { version = "1.9.0", default-features = false }
embedded-hal = { version = "0.2.7", features = ["unproven"] }
